[package]
name = "rimages"
version = "0.1.0"
description = "A high-performance, desktop image compressor. Supports smart compression for JPG, PNG, WebP, and AVIF."
authors = ["Romain Lathuiliere niamorweb@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.11.0"
anyhow = "1.0.100"
image = { version = "0.25.9", features = ["jpeg", "png", "webp", "avif"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.5"
webp = "0.3"
ravif = "0.11"
imgref = "1.10"
rgb = "0.8"
imagequant = "4.3"
png = "0.17"
